Fixed hover display flow by toggling z-indexes.

--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@ button {
   bottom: 0;
   width: 100%;
   height: 40px;
-  z-index: 1;
+  z-index: 2;
   background-color: white;
   display: flex;
   justify-content: center;
@@ -112,7 +112,7 @@ button {
   background: #fff;
   padding: 4px;
   border-top: 3px solid black;
-  z-index: 2;
+  z-index: 3;
 }
 
 .leaflet-container {
